@@ -27,15 +27,11 @@
 (defn db [version]
   (reify db/DB
     (setup! [_ test node]
-      (info "** Setting up Aeron" version "**")
-        (c/cd "/users/hilkiu2/aeron"
-          ;; Clean up previous cluster dirs and shared memory
-          (c/exec :rm :-rf "aeron-samples/scripts/cluster/node*")
-          ;; (c/exec :rm :-rf "/dev/shm/aeron-*")
-          (c/exec :rm :-f "aeron-samples/scripts/cluster/logs/cluster-*.log")
-
-          (info "...Assembling aeron-agent and aeron-all")
-          (c/exec :bash :-c "echo \"[$(date)]\" > /users/hilkiu2/aeron/cluster.log && echo \"[$(date)]\" > /users/hilkiu2/aeron/cluster.err && export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64; export PATH=$JAVA_HOME/bin:$PATH; ./gradlew :aeron-agent:assemble :aeron-all:assemble -x test -x checkstyleMain -x checkstyleTest >> /users/hilkiu2/aeron/cluster.log 2>> /users/hilkiu2/aeron/cluster.err")
+      ;; (info "** Setting up Aeron" version "**")
+        (c/cd "/users/hilkiu2/aeron"          
+          (c/exec :bash :-c "echo \"[$(date)]\" > /users/hilkiu2/aeron/cluster.log && echo \"[$(date)]\" > /users/hilkiu2/aeron/cluster.err")
+          ;; (info "...Assembling aeron-agent and aeron-all")
+          ;; (c/exec :bash :-c "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64; export PATH=$JAVA_HOME/bin:$PATH; ./gradlew :aeron-agent:assemble :aeron-all:assemble -x test -x checkstyleMain -x checkstyleTest >> /users/hilkiu2/aeron/cluster.log 2>> /users/hilkiu2/aeron/cluster.err")
 
           (info "...Running the CLUSTER")
           (c/cd "/users/hilkiu2/aeron/aeron-samples/scripts/cluster"
@@ -44,41 +40,39 @@
 
           (c/exec :sleep "60")
 
-          ;; CLIENT BUILD
-          ;; (info "\nStep 2: Launching Aeron CLIENT process")
-          ;; (info "Assemble aeron-cluster and aeron-samples")
-          ;; (c/exec :bash :-c "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64; export PATH=$JAVA_HOME/bin:$PATH; ./gradlew :aeron-client:assemble :aeron-cluster:assemble :aeron-samples:assemble -x test -x checkstyleMain -x checkstyleTest > /users/hilkiu2/aeron/cluster.log 2> /users/hilkiu2/aeron/cluster.err")
-
-          ;; CLIENT RUN
-          ;; (info "Running the CLIENT & 10 bids")
-          ;; (c/cd "/users/hilkiu2/aeron/aeron-samples/scripts/cluster"
-            ;; (c/exec :bash :-c "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64; export PATH=$JAVA_HOME/bin:$PATH; java --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED -cp '/users/hilkiu2/aeron/libs/*:/users/hilkiu2/aeron/aeron-samples/build/libs/aeron-samples-1.47.4.jar' -Daeron.cluster.tutorial.customerId=10 -Daeron.cluster.tutorial.numOfBids=10 -Daeron.cluster.tutorial.bidIntervalMs=1000 io.aeron.samples.cluster.tutorial.BasicAuctionClusterClient > /users/hilkiu2/aeron/client.log 2> /users/hilkiu2/aeron/client.err &")
-            ;; (c/exec :bash :-c "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64; export PATH=$JAVA_HOME/bin:$PATH; bash -c /users/hilkiu2/aeron/aeron-samples/scripts/cluster/basic-auction-client 10 10 1000 > /users/hilkiu2/aeron/client.log 2> /users/hilkiu2/aeron/client.err &")
-            ;; (c/exec :bash :-c "ps aux | grep 'basic-auction-client' | grep -v grep | awk '{print $2}' > /users/hilkiu2/aeron/client.pids"))
-
-          ;; (c/exec :sleep "90")
-
           ;; HTTP
           (info "...Running the HTTP SERVER")
           
           (c/exec :chmod "+x" "~/setup-http.sh")
           (c/exec :bash "~/setup-http.sh")
           (c/exec :bash :-c "echo \"[$(date)]\" > /users/hilkiu2/aeron/httpServer.pids && pgrep -f 'AuctionHttpServer' >> /users/hilkiu2/aeron/httpServer.pids")
-
-          ;; (c/exec :sleep "90") ;; wait for logs to catch up
         )
     )
     (teardown! [_ test node]
       (info "Tearing down Aeron on" node)
+
       (ignore-errors
-        (c/su (c/exec :pkill :-f "BasicAuctionClusteredServiceNode")))
-      (ignore-errors
-        (c/su (c/exec :pkill :-f "BasicAuctionClusterClient")))
-      (ignore-errors
-        (c/su (c/exec :pkill :-f "bash ./basic-auction-cluster")))
-      (ignore-errors
-        (c/su (c/exec :pkill :-f "AuctionHttpServer")))
-    )
+        (c/exec :bash :-c "pkill -f Auction || true"))
+      (c/exec :sleep "15")
+
+      (c/exec :bash :-c "rm -rf /users/hilkiu2/aeron/aeron-samples/scripts/cluster/node*")
+      (c/exec :sleep "15")
+
+      (c/exec :bash :-c "rm -rf /dev/shm/aeron-*")
+      (c/exec :sleep "15")
+
+      (c/exec :bash :-c "rm -rf /users/hilkiu2/aeron/aeron-samples/scripts/cluster/logs")
+      (c/exec :sleep "15")
+    
+      ;; (let [check-results
+      ;;     {:remaining-nodes    (c/exec :bash :-c "ls -1 /users/hilkiu2/aeron/aeron-samples/scripts/cluster/node* 2>/dev/null || echo NONE")
+      ;;     :remaining-shm      (c/exec :bash :-c "ls -1 /dev/shm/aeron* 2>/dev/null || echo NONE")
+      ;;     :remaining-logs     (c/exec :bash :-c "ls -1 /users/hilkiu2/aeron/aeron-samples/scripts/cluster/logs/* 2>/dev/null || echo NONE")}]
+      ;; (doseq [[label result] check-results]
+      ;;   (if (re-find #"NONE" result)
+      ;;     (info label "Clean")
+      ;;     (warn label "Still present! " result))))
+      )
 
     db/LogFiles
     (log-files [_ test node]
@@ -88,9 +82,6 @@
      "/users/hilkiu2/aeron/cluster.log"
      "/users/hilkiu2/aeron/cluster.pids"
      "/users/hilkiu2/aeron/cluster.err"
-    ;;  "/users/hilkiu2/aeron/client.log"
-    ;;  "/users/hilkiu2/aeron/client.pids"
-    ;;  "/users/hilkiu2/aeron/client.err"
      "/users/hilkiu2/aeron/httpServer.log"
      "/users/hilkiu2/aeron/httpServer.pids"
      "/users/hilkiu2/aeron/httpServer.err"])
